[package]
name = "rust-unix"
version = "0.1.0"
authors = ["alex <jipings@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.109"
chrono = "0.4.19"
clap = "2.34.0"
ansi_term = "0.12.1"
crossbeam = "0.8"
lazy_static = "1.4.0"
threadpool = "1.0"
ring = "0.16.20"
num_cpus = "1.0"
walkdir = "2"
