[package]
name = "rust-unix"
version = "0.1.0"
authors = ["alex <jipings@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.109"
chrono = "0.4.19"
clap = "2.34.0"
ansi_term = "0.12.1"
crossbeam = "0.8"
lazy_static = "1.4.0"
threadpool = "1.0"
ring = "0.16.20"
num_cpus = "1.0"
walkdir = "2"
image = "0.23.14"
num = "0.4"
rayon = "1.5.1"
error-chain = "0.12.4"
glob = "0.3.0"
data-encoding = "2.3.2"
reqwest = { version = "0.11", features = ["json"] }
csv = "1.1"
serde_derive = "1.0"
serde = "1.0"
regex = "1.5.4"
select = "0.6.0-alpha.1"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"